add feature to add member in the list